--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <title>Sample Site</title>
   <link rel="stylesheet" href="/static/styles/bootstrap.min.css">
+  <style>
+    body{
+      padding-top: 4.5rem;
+    }
+  </style>
 
 </head>
 
@@ -18,7 +23,10 @@
         <li class="nav-item">
           <a class="nav-link active" href="/app">Go to App</a>
         </li>
-
+  
+        <li class="nav-item">
+          <a class="nav-link active" href="/todo">Go to Todo</a>
+        </li>
       </ul>
 
     </div>
